--- a/vijay-cicd/pom.xml
+++ b/vijay-cicd/pom.xml
@@ -28,6 +28,80 @@
 				<configuration>
 				</configuration>
 			</plugin>
+			<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>build-helper-maven-plugin</artifactId>
+			<version>1.7</version>
+			<executions>
+			<execution>
+			<id>add-resource</id>
+			<phase>generate-resources</phase>
+			<goals>
+			<goal>add-resource</goal>
+			</goals>
+			<configuration>
+			<resources>
+			<resource>
+			<directory>src/main/app/</directory>
+			</resource>
+			<resource>
+			<directory>mappings/</directory>
+			</resource>
+			</resources>
+			</configuration>
+			</execution>
+			</executions>
+	</plugin>
+<!-- Read property file -->
+<plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>properties-maven-plugin</artifactId>
+<version>1.0.0</version>
+<executions>
+<execution>
+<phase>initialize</phase>
+<goals>
+<goal>read-project-properties</goal>
+</goals>
+<configuration>
+<files>
+<file>src/main/resources/init.properties</file>
+</files>
+</configuration>
+</execution>
+</executions>
+</plugin>
+<!-- Deploy to Cloudhub -->
+<plugin>
+<groupId>org.mule.tools.maven</groupId>
+<artifactId>mule-maven-plugin</artifactId>
+<version>2.0</version>
+<configuration>
+<deploymentType>cloudhub</deploymentType>
+<muleVersion>3.8.4</muleVersion>
+<username>${anypoint.username}</username>
+<password>${anypoint.password}</password>
+<redeploy>true</redeploy>
+<environment>${anypoint.environment}</environment>
+<workerType>Micro</workerType>
+</configuration>
+<executions>
+<execution>
+<id>deploy</id>
+<phase>deploy</phase>
+<goals>
+<goal>deploy</goal>
+</goals>
+</execution>
+</executions>
+</plugin>
+<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-deploy-plugin</artifactId>
+<configuration>
+<skip>true</skip>
+</configuration>
+</plugin>
 		</plugins>
 	</build>
 
