--- a/vijay-cicd/pom.xml
+++ b/vijay-cicd/pom.xml
@@ -133,6 +133,18 @@
             <url>https://repository.mulesoft.org/releases/</url>
             <layout>default</layout>
         </repository>
+        	<repository>
+				<id>Central</id>
+				<name>Central</name>
+				<url>http://repo1.maven.org/maven2/</url>
+				<layout>default</layout>
+				</repository>
+				<repository>
+				<id>mulesoft-releases</id>
+				<name>MuleSoft Releases Repository</name>
+				<url>http://repository.mulesoft.org/releases/</url>
+				<layout>default</layout>
+		</repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -144,6 +156,19 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
+        <pluginRepository>
+			<id>mulesoft-release</id>
+			<name>mulesoft release repository</name>
+			<layout>default</layout>
+			<url>http://repository.mulesoft.org/releases/</url>
+			<snapshots>
+			<enabled>false</enabled>
+			</snapshots>
+			</pluginRepository>
+			<pluginRepository>
+			<id>mule-public</id>
+			<url>https://repository.mulesoft.org/nexus/content/repositories/releases</url>
+	</pluginRepository>
     </pluginRepositories>
 
 </project>
