--- a/vijay-cicd/pom.xml
+++ b/vijay-cicd/pom.xml
@@ -16,6 +16,8 @@
 
 		<app.runtime>4.1.4</app.runtime>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
+		
+		<mule.tools.version>1.2</mule.tools.version>
 	</properties>
 
 	<build>
@@ -26,7 +28,23 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
+					<deploymentType>cloudhub</deploymentType>
+					<muleVersion>3.8.4</muleVersion>
+					<username>${anypoint.username}</username>
+					<password>${anypoint.password}</password>
+					<redeploy>true</redeploy>
+					<environment>${anypoint.environment}</environment>
+					<workerType>Micro</workerType>
 				</configuration>
+				<executions>
+				<execution>
+				<id>deploy</id>
+				<phase>deploy</phase>
+				<goals>
+				<goal>deploy</goal>
+				</goals>
+				</execution>
+				</executions>
 			</plugin>
 			<plugin>
 			<groupId>org.codehaus.mojo</groupId>
@@ -72,29 +90,7 @@
 </executions>
 </plugin>
 <!-- Deploy to Cloudhub -->
-<plugin>
-<groupId>org.mule.tools.maven</groupId>
-<artifactId>mule-maven-plugin</artifactId>
-<version>2.0</version>
-<configuration>
-<deploymentType>cloudhub</deploymentType>
-<muleVersion>3.8.4</muleVersion>
-<username>${anypoint.username}</username>
-<password>${anypoint.password}</password>
-<redeploy>true</redeploy>
-<environment>${anypoint.environment}</environment>
-<workerType>Micro</workerType>
-</configuration>
-<executions>
-<execution>
-<id>deploy</id>
-<phase>deploy</phase>
-<goals>
-<goal>deploy</goal>
-</goals>
-</execution>
-</executions>
-</plugin>
+
 <plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-deploy-plugin</artifactId>
@@ -127,12 +123,7 @@
             <url>https://maven.anypoint.mulesoft.com/api/v1/maven</url>
             <layout>default</layout>
         </repository>
-        <repository>
-            <id>mulesoft-releases</id>
-            <name>MuleSoft Releases Repository</name>
-            <url>https://repository.mulesoft.org/releases/</url>
-            <layout>default</layout>
-        </repository>
+        
         	<repository>
 				<id>Central</id>
 				<name>Central</name>
