--- a/vijay-cicd/pom.xml
+++ b/vijay-cicd/pom.xml
@@ -16,88 +16,26 @@
 
 		<app.runtime>4.1.4</app.runtime>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
-		
-		<mule.tools.version>1.2</mule.tools.version>
 	</properties>
 
 	<build>
-		<plugins>
-			<plugin>
+	<plugins>
+		<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<deploymentType>cloudhub</deploymentType>
-					<muleVersion>4.1.4</muleVersion>
-					<username>${anypoint.username}</username>
-					<password>${anypoint.password}</password>
-					<redeploy>true</redeploy>
-					<environment>${anypoint.environment}</environment>
-					<workerType>Micro</workerType>
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>${app.runtime}</muleVersion>
+						<username>vijaynaidus99</username>
+						<password>Sunny123#</password>
+						<applicationName>${project.artifactId}</applicationName>
+						<environment>Sandbox</environment>
+					</cloudHubDeployment>
 				</configuration>
-				<executions>
-				<execution>
-				<id>deploy</id>
-				<phase>deploy</phase>
-				<goals>
-				<goal>deploy</goal>
-				</goals>
-				</execution>
-				</executions>
 			</plugin>
-			<plugin>
-			<groupId>org.codehaus.mojo</groupId>
-			<artifactId>build-helper-maven-plugin</artifactId>
-			<version>1.7</version>
-			<executions>
-			<execution>
-			<id>add-resource</id>
-			<phase>generate-resources</phase>
-			<goals>
-			<goal>add-resource</goal>
-			</goals>
-			<configuration>
-			<resources>
-			<resource>
-			<directory>src/main/app/</directory>
-			</resource>
-			<resource>
-			<directory>mappings/</directory>
-			</resource>
-			</resources>
-			</configuration>
-			</execution>
-			</executions>
-	</plugin>
-<!-- Read property file -->
-<plugin>
-<groupId>org.codehaus.mojo</groupId>
-<artifactId>properties-maven-plugin</artifactId>
-<version>1.0.0</version>
-<executions>
-<execution>
-<phase>initialize</phase>
-<goals>
-<goal>read-project-properties</goal>
-</goals>
-<configuration>
-<files>
-<file>src/main/resources/init.properties</file>
-</files>
-</configuration>
-</execution>
-</executions>
-</plugin>
-<!-- Deploy to Cloudhub -->
-
-<plugin>
-<groupId>org.apache.maven.plugins</groupId>
-<artifactId>maven-deploy-plugin</artifactId>
-<configuration>
-<skip>true</skip>
-</configuration>
-</plugin>
 		</plugins>
 	</build>
 
@@ -123,19 +61,12 @@
             <url>https://maven.anypoint.mulesoft.com/api/v1/maven</url>
             <layout>default</layout>
         </repository>
-        
-        	<repository>
-				<id>Central</id>
-				<name>Central</name>
-				<url>http://repo1.maven.org/maven2/</url>
-				<layout>default</layout>
-				</repository>
-				<repository>
-				<id>mulesoft-releases</id>
-				<name>MuleSoft Releases Repository</name>
-				<url>http://repository.mulesoft.org/releases/</url>
-				<layout>default</layout>
-		</repository>
+        <repository>
+            <id>mulesoft-releases</id>
+            <name>MuleSoft Releases Repository</name>
+            <url>https://repository.mulesoft.org/releases/</url>
+            <layout>default</layout>
+        </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
@@ -147,19 +78,6 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
-        <pluginRepository>
-			<id>mulesoft-release</id>
-			<name>mulesoft release repository</name>
-			<layout>default</layout>
-			<url>http://repository.mulesoft.org/releases/</url>
-			<snapshots>
-			<enabled>false</enabled>
-			</snapshots>
-	</pluginRepository>
-	<pluginRepository>
-			<id>mule-public</id>
-			<url>https://repository.mulesoft.org/nexus/content/repositories/releases</url>
-	</pluginRepository>
     </pluginRepositories>
 
 </project>
