--- a/vijay-cicd/pom.xml
+++ b/vijay-cicd/pom.xml
@@ -19,23 +19,42 @@
 	</properties>
 
 	<build>
-	<plugins>
-		<plugin>
+		<plugins>
+			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-					<cloudHubDeployment>
-						<uri>https://anypoint.mulesoft.com</uri>
-						<muleVersion>${app.runtime}</muleVersion>
-						<username>vijaynaidus99</username>
-						<password>Sunny123#</password>
-						<applicationName>${project.artifactId}</applicationName>
-						<environment>Sandbox</environment>
-					</cloudHubDeployment>
 				</configuration>
 			</plugin>
+			<plugin>
+			<groupId>org.mule.tools.maven</groupId>
+				<artifactId>mule-maven-plugin</artifactId>
+				<version>${mule.maven.plugin.version}</version>
+				<configuration> 
+        <cloudHubDeployment> 
+          <muleVersion>${app.runtime}</muleVersion> 
+          <username>vijaynaidus99</username> 
+          <password>Sunny123#</password> 
+          <environment>Sandbox</environment> 
+          <!-- <region>eu-central-1</region>  -->
+          <workerType>Micro</workerType>
+          <workers>1</workers> 
+          <uri>https://anypoint.mulesoft.com</uri>; 
+          <applicationName>vijay-cicd</applicationName> 
+        </cloudHubDeployment> 
+      </configuration> 
+      <executions> 
+        <execution> 
+          <id>deploy</id> 
+          <phase>deploy</phase> 
+          <goals> 
+            <goal>deploy</goal> 
+          </goals> 
+        </execution> 
+      </executions> 
+				</plugin>
 		</plugins>
 	</build>
 
